Fix: Videos en página de producto y tags

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -133,6 +133,10 @@
 
 /** fin Botones de opción para las secciones de administración **/
 	
+.listSelect{
+	list-style:none;
+}
+
 /**
  * 	Header
  */
